# mtgff-cards-to-watch

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ffw.yml
archive/: cards.json  index.json
archive/episodes/0000-b-michael-caffrey-on-the-viability-of-magic-vending-f89adab8/: metadata.json
archive/episodes/0000-ep55b-bonus-episode-interview-with-dan-bock-of-powernine-games-d426fc5d/: metadata.json
archive/episodes/0000-mtg-fast-finance-322-pride-secret-lair-605f8a8e/: metadata.json
archive/episodes/0000-mtg-fast-finance-324-early-takes-on-cmr2-e37419ea/: metadata.json
archive/episodes/0000-mtg-fast-finance-325-cmr2-previews-continue-b13e90d5/: metadata.json
archive/episodes/0000-mtg-fast-finance-326-cmr2-commander-decks-bbbb631f/: metadata.json
archive/episodes/0000-mtg-fast-finance-327-the-cmr2-mythics-debacle-c31a8913/: metadata.json
archive/episodes/0094-item/: metadata.json
docs/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  PRODUCT_SPEC.md  ROADMAP.md  RUNBOOK.md  VISION.md
docs/history/: 2026-07-17-final-functional-pass.md  2026-07-17-incremental-historical-backfill.md  2026-07-20-bounded-retry-reliability.md
schemas/: cards-to-watch.schema.json
src/ffw/: __init__.py  archive.py  cli.py  config.py  detection.py  interfaces.py  mocks.py  models.py  pipeline.py  production.py  rendering.py  state.py  utils.py  validation.py
state/: episodes.json
tests/: test_pipeline.py  test_production.py  test_validation.py
tests/fixtures/: feed.xml
web/: app.js  index.html  styles.css  summary.html  summary.js  table.js
(+518 files in other folders)
