[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mtgff-cards-to-watch"
version = "0.2.0"
description = "FFW: an automated Cards to Watch pipeline and local archive"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Private" }
authors = [{ name = "FFW" }]
dependencies = ["openai>=2.45.0,<3"]

[project.scripts]
ffw = "ffw.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ffw = ["fixtures/*.json"]
